unpackaged/main/default/objects/ACH_Transaction_Log__c/ACH_Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>ACH Transaction Log</label>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>ACH Transaction Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACH Transactions Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>