unpackaged/main/default/objects/ACH_Transaction_Log__c/fields/ACH_Trace_Number__c.field-meta.xml
<CustomField>
    <fullName>ACH_Trace_Number__c</fullName>
    <description>ACH payment trace number assigned to the payment. The field only applies to PROCESSED payments.</description>
    <inlineHelpText>ACH payment trace number assigned to the payment. The field only applies to PROCESSED payments.</inlineHelpText>
    <label>ACH Trace Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>