unpackaged/main/default/objects/ACH_Transaction_Log__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>cmbls__Disbursement__c</referenceTo>
    <relationshipLabel>ACH Transactions Logs</relationshipLabel>
    <relationshipName>ACH_Transactions_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>