unpackaged/main/default/objects/ACH_Transaction_Log__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>cmbls__Payment__c</referenceTo>
    <relationshipLabel>ACH Transactions Logs</relationshipLabel>
    <relationshipName>ACH_Transactions_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>