unpackaged/main/default/objects/ACH_Transaction_Log__c/fields/Pre_Pending_Update_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Pre_Pending_Update_Attempts__c</fullName>
    <label>Pre Pending Update Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>